[package]
name = "udp_to_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0" }
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.22.3"
argparse = "0.2.2"

[lib]
name = "udp_to_redis"
path = "src/lib.rs"

[[bin]]
name = "redis_worker"
path = "src/main.rs"

